--- a/README.org
+++ b/README.org
@@ -91,8 +91,8 @@ We are going to make extensive use of the following:
  - The excellent online book: [[https://www.braveclojure.com/clojure-for-the-brave-and-true/][Clojure for the Brave and True]]
  - The [[https://github.com/functional-koans/clojure-koans][clojure koans]]
  - Many of the excellent at [[https://4clojure.oxal.org/][4clojure sample problems]]
- - In lessons 7 and 8, we will make use of TODO.
- - In lessons 9 and 10, we will study a bit of [[https://github.com/reagent-project/reagent][reagent]].
+ - In lessons 7 and 8, we will make use of this simple server playground (TODO).
+ - In lessons 9 and 10, we will study a bit of reagent (TODO)
  - In lessons 11 and 12, we will build our own version of the [[https://www.nytimes.com/puzzles/spelling-bee][New York Times Spelling Bee]].
 
  ** Recommended external links
